syntax = "proto3";

import "scuffle/platform/internal/types/processed_image_variant.proto";

package scuffle.platform.internal.types;

message UploadedFileMetadata {
  message Image {
    repeated ProcessedImageVariant versions = 1;
  }

  oneof metadata {
    Image image = 1;
  }
}
